--- a/ui/index.html
+++ b/ui/index.html
@@ -17,6 +17,11 @@
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
+            <form class="d-flex" id="search-form">
+                <input class="form-control me-2" type="search" placeholder="Search products" aria-label="Search"
+                    id="search-input">
+                <button class="btn btn-outline-success" type="submit">Search</button>
+            </form>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
