--- a/ui/cart.html
+++ b/ui/cart.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>E-Commerce Store</title>
+    <title>Shopping Cart - E-Commerce Store</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
 </head>
@@ -13,12 +13,13 @@
     <header id="header"></header>
 
     <main class="container mt-4">
-        <section id="products" class="mt-5">
-            <h2 class="mb-4">Our Products</h2>
-            <div id="product-list" class="row">
-                <!-- Product items will be dynamically added here -->
-            </div>
-        </section>
+        <h1>Shopping Cart</h1>
+        <div id="cart-items">
+            <!-- Cart items will be dynamically added here -->
+        </div>
+        <div id="cart-total" class="mt-4">
+            <!-- Total amount will be displayed here -->
+        </div>
     </main>
 
     <footer class="bg-light text-center py-3 mt-5">
@@ -28,6 +29,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/header.js"></script>
     <script src="js/script.js"></script>
+    <script src="js/cart.js"></script>
 </body>
 
 </html>
