--- a/ui/register.html
+++ b/ui/register.html
@@ -3,22 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login - E-Commerce Store</title>
+    <title>Register - E-Commerce Store</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/login.css">
+    <link rel="stylesheet" href="css/register.css">
 
 </head>
 <body>
     <header id="header"></header>
-    
+
     <div class="container mt-4" role="main">
         <div style="display: flex; align-items: center; margin-bottom: 10px;">
             <a href="/ui/index.html" style="background-color: #3498db; color: white; padding: 10px 15px; text-decoration: none; border-radius: 5px; margin-right: 10px;">Home</a>
           </div>
-        <h1>Login</h1>
-        <div class="login-form">
-            <form id="login-form">
+        <h1>Register</h1>
+        <div class="register-form">
+            <form id="register-form">
+                <div class="form-group">
+                    <label for="username">Username:</label>
+                    <input type="text" id="username" name="username" required>
+                </div>
                 <div class="form-group">
                     <label for="email">Email:</label>
                     <input type="text" id="email" name="email" required>
@@ -27,8 +31,8 @@
                     <label for="password">Password:</label>
                     <input type="password" id="password" name="password" required>
                 </div>
-                <button type="submit" class="btn-login">Login</button>
-                <div id="login-message"></div> </form>
+                <button type="submit" class="btn-register">Register</button>
+                <div id="register-message"></div> </form>
             </form>
         </div>
     </div>
@@ -37,6 +41,6 @@
         <p>© 2024 My E-Commerce Store. All rights reserved.</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="js/login.js"></script>
+    <script src="js/register.js"></script>
 </body>
 </html>
