--- a/ui/index.html
+++ b/ui/index.html
@@ -7,19 +7,40 @@
     <title>E-Commerce Store</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/plants.css">
 </head>
 
 <body>
     <header id="header"></header>
 
-    <main class="container mt-4">
-        <section id="products" class="mt-5">
-            <h2 class="mb-4">Our Products</h2>
-            <div id="product-list" class="row">
-                <!-- Product items will be dynamically added here -->
-            </div>
-        </section>
-    </main>
+    <div role="main">
+        <div id="search-section" class="section">
+            <h2>Search Plants</h2>
+            <form id="search-form">
+                <input type="text" id="q" name="q" placeholder="Search term">
+                <select id="category" name="category">
+                    <option value="">All Categories</option>
+                    <option value="Flower">Flower</option>
+                </select>
+                <input type="number" id="minPrice" name="minPrice" placeholder="Min Price">
+                <input type="number" id="maxPrice" name="maxPrice" placeholder="Max Price">
+                <!-- Write your comments here <select id="sort" name="sort">
+                    <option value="name">Sort by Name</option>
+                    <option value="price">Sort by Price</option>
+                </select>
+                <input type="number" id="limit" name="limit" placeholder="Results per page" value="10">-->
+                <button type="submit">Search</button>
+            </form>
+        </div>
+
+        <div id="plants-container" class="section"></div>
+
+        <div id="pagination">
+            <button id="prev-page">Previous</button>
+            <span id="current-page">1</span>
+            <button id="next-page">Next</button>
+        </div>
+    </div>
 
     <footer class="bg-light text-center py-3 mt-5">
         <p>&copy; 2024 My E-Commerce Store. All rights reserved.</p>
@@ -27,7 +48,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/header.js"></script>
-    <script src="js/script.js"></script>
+    <script src="js/plants.js"></script>
 </body>
 
 </html>
