--- a/ui/login.html
+++ b/ui/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login - E-Commerce Store</title>
+    <title>Login - Plants E-Commerce Store</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/login.css">
@@ -34,7 +34,7 @@
     </div>
 
     <footer>
-        <p>© 2024 My E-Commerce Store. All rights reserved.</p>
+        <p>&copy; 2024 Plants E-Commerce Store. All rights reserved.</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/login.js"></script>
