--- a/ui/register.html
+++ b/ui/register.html
@@ -38,7 +38,7 @@
     </div>
 
     <footer>
-        <p>© 2024 My E-Commerce Store. All rights reserved.</p>
+        <p>&copy; 2024 Plants E-Commerce Store. All rights reserved.</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/register.js"></script>
