Added functionality to create plants. Fixed visuals of all pages

--- a/ui/register.html
+++ b/ui/register.html
@@ -14,7 +14,7 @@
 
     <div class="container mt-4" role="main">
         <div style="display: flex; align-items: center; margin-bottom: 10px;">
-            <a href="/ui/index.html" style="background-color: #3498db; color: white; padding: 10px 15px; text-decoration: none; border-radius: 5px; margin-right: 10px;">Home</a>
+            <a href="/ui/index.html" style="background-color: #28a745; color: white; padding: 10px 15px; text-decoration: none; border-radius: 5px; margin-right: 10px;">Home</a>
           </div>
         <h1>Register</h1>
         <div class="register-form">
