--- a/ui/index.html
+++ b/ui/index.html
@@ -14,6 +14,24 @@
     <header id="header"></header>
 
     <div role="main">
+        <button id="create-plant-btn" class="btn btn-success">Create Plant</button>
+
+        <div id="create-plant-modal" class="modal" style="display: none;">
+            <div class="modal-content">
+                <span id="close-create-plant" class="close">&times;</span>
+                <h2>Create a New Plant</h2>
+                <form id="create-plant-form">
+                    <input type="text" id="plant-name" name="name" placeholder="Plant Name" required><br>
+                    <input type="text" id="plant-description" name="description" placeholder="Description" required><br>
+                    <input type="number" id="plant-price" name="price" placeholder="Price" step="0.01" required><br>
+                    <input type="text" id="plant-category" name="category" placeholder="Category" required><br>
+                    <input type="text" id="plant-origin-country" name="originCountry" placeholder="Origin Country" required><br>
+                    <label for="indoor">Indoor Plant:</label>
+                    <input type="checkbox" id="indoor" name="indoor"><br>
+                    <button type="submit" class="btn btn-success">Submit</button>
+                </form>
+            </div>
+        </div>
         <div id="search-section" class="section">
             <h2>Search Plants</h2>
             <form id="search-form">
