--- a/ui/index.html
+++ b/ui/index.html
@@ -11,62 +11,112 @@
 </head>
 
 <body>
-    <header id="header"></header>
+    <header id="header" class="bg-light p-3 shadow-sm">
+        <h1 class="text-center">Plant Store</h1>
+    </header>
 
-    <div role="main">
-        <button id="create-plant-btn" class="btn btn-success">Create Plant</button>
+    <div role="main" class="container mt-4">
+        <!-- Create Plant Button -->
+        <div class="d-flex justify-content-end mb-3">
+            <button id="create-plant-btn" class="btn btn-success">Create Plant</button>
+        </div>
 
-        <div id="create-plant-modal" class="modal" style="display: none;">
-            <div class="modal-content">
-                <span id="close-create-plant" class="close">&times;</span>
-                <h2>Create a New Plant</h2>
-                <form id="create-plant-form">
-                    <input type="text" id="plant-name" name="name" placeholder="Plant Name" required><br>
-                    <input type="text" id="plant-description" name="description" placeholder="Description" required><br>
-                    <input type="number" id="plant-price" name="price" placeholder="Price" step="0.01" required><br>
-                    <input type="text" id="plant-category" name="category" placeholder="Category" required><br>
-                    <input type="text" id="plant-origin-country" name="originCountry" placeholder="Origin Country" required><br>
-                    <label for="indoor">Indoor Plant:</label>
-                    <input type="checkbox" id="indoor" name="indoor"><br>
-                    <button type="submit" class="btn btn-success">Submit</button>
-                </form>
+        <!-- Create Plant Modal -->
+        <div id="create-plant-modal" class="modal fade" tabindex="-1">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title">Create a New Plant</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <form id="create-plant-form">
+                            <div class="mb-3">
+                                <label for="plant-name" class="form-label">Plant Name</label>
+                                <input type="text" class="form-control" id="plant-name" name="name" placeholder="Plant Name" required>
+                            </div>
+                            <div class="mb-3">
+                                <label for="plant-description" class="form-label">Description</label>
+                                <input type="text" class="form-control" id="plant-description" name="description" placeholder="Description" required>
+                            </div>
+                            <div class="mb-3">
+                                <label for="plant-price" class="form-label">Price</label>
+                                <input type="number" class="form-control" id="plant-price" name="price" placeholder="Price" step="0.01" required>
+                            </div>
+                            <div class="mb-3">
+                                <label for="plant-category" class="form-label">Category</label>
+                                <input type="text" class="form-control" id="plant-category" name="category" placeholder="Category" required>
+                            </div>
+                            <div class="mb-3">
+                                <label for="plant-origin-country" class="form-label">Origin Country</label>
+                                <input type="text" class="form-control" id="plant-origin-country" name="originCountry" placeholder="Origin Country" required>
+                            </div>
+                            <div class="form-check mb-3">
+                                <input class="form-check-input" type="checkbox" id="indoor" name="indoor">
+                                <label class="form-check-label" for="indoor">Indoor Plant</label>
+                            </div>
+                            <button type="submit" class="btn btn-success w-100">Submit</button>
+                        </form>
+                    </div>
+                </div>
             </div>
         </div>
-        <div id="search-section" class="section">
-            <h2>Search Plants</h2>
-            <form id="search-form">
-                <input type="text" id="q" name="q" placeholder="Search term">
-                <select id="category" name="category">
-                    <option value="">All Categories</option>
-                    <option value="Flower">Flower</option>
-                </select>
-                <input type="number" id="minPrice" name="minPrice" placeholder="Min Price">
-                <input type="number" id="maxPrice" name="maxPrice" placeholder="Max Price">
-                <!-- Write your comments here <select id="sort" name="sort">
-                    <option value="name">Sort by Name</option>
-                    <option value="price">Sort by Price</option>
-                </select>
-                <input type="number" id="limit" name="limit" placeholder="Results per page" value="10">-->
-                <button type="submit">Search</button>
+
+        <!-- Search Section -->
+        <div id="search-section" class="section mb-4">
+            <h2 class="mb-3">Search Plants</h2>
+            <form id="search-form" class="row g-3">
+                <div class="col-md-4">
+                    <input type="text" class="form-control" id="q" name="q" placeholder="Search term">
+                </div>
+                <div class="col-md-3">
+                    <select id="category" name="category" class="form-select">
+                        <option value="">All Categories</option>
+                        <option value="Flower">Flower</option>
+                    </select>
+                </div>
+                <div class="col-md-2">
+                    <input type="number" class="form-control" id="minPrice" name="minPrice" placeholder="Min Price">
+                </div>
+                <div class="col-md-2">
+                    <input type="number" class="form-control" id="maxPrice" name="maxPrice" placeholder="Max Price">
+                </div>
+                <div class="col-md-1">
+                    <button type="submit" class="btn btn-primary w-100">Search</button>
+                </div>
             </form>
         </div>
 
-        <div id="plants-container" class="section"></div>
+        <!-- Plants Container -->
+        <div id="plants-container" class="row g-3">
+            <!-- Dynamic content will be inserted here -->
+        </div>
 
-        <div id="pagination">
-            <button id="prev-page">Previous</button>
-            <span id="current-page">1</span>
-            <button id="next-page">Next</button>
+        <!-- Pagination -->
+        <div id="pagination" class="d-flex justify-content-center align-items-center mt-4">
+            <button id="prev-page" class="btn btn-outline-primary me-3">Previous</button>
+            <span id="current-page" class="fs-5">1</span>
+            <button id="next-page" class="btn btn-outline-primary ms-3">Next</button>
         </div>
     </div>
 
     <footer class="bg-light text-center py-3 mt-5">
-        <p>&copy; 2024 My E-Commerce Store. All rights reserved.</p>
+        <p>&copy; 2024 Plants Store. All rights reserved.</p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/header.js"></script>
     <script src="js/plants.js"></script>
+
+    <script>
+        // Script to toggle the create plant modal
+        const createPlantBtn = document.getElementById('create-plant-btn');
+        const createPlantModal = new bootstrap.Modal(document.getElementById('create-plant-modal'));
+
+        createPlantBtn.addEventListener('click', () => {
+            createPlantModal.show();
+        });
+    </script>
 </body>
 
 </html>
