--- a/ui/login.html
+++ b/ui/login.html
@@ -7,35 +7,54 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/login.css">
-
 </head>
 <body>
-    <header id="header"></header>
+    <!-- Header with Home Button -->
+    <header id="header" class="bg-light p-3 shadow-sm">
+        <div class="container d-flex align-items-center">
+            <!-- Home Button on the left -->
+            <a href="/ui/index.html" class="btn btn-success me-3">Home</a>
+            
+            <!-- Store Title in the Center -->
+            <h1 class="flex-grow-1 text-center">Plants E-Commerce Store</h1>
+        </div>
+    </header>
     
-    <div class="container mt-4" role="main">
-        <div style="display: flex; align-items: center; margin-bottom: 10px;">
-            <a href="/ui/index.html" style="background-color: #28a745; color: white; padding: 10px 15px; text-decoration: none; border-radius: 5px; margin-right: 10px;">Home</a>
-          </div>
-        <h1>Login</h1>
-        <div class="login-form">
+    <!-- Main Container -->
+    <div class="container mt-5 d-flex justify-content-center align-items-center">
+        <div class="card p-4 shadow-lg" style="width: 100%; max-width: 400px;">
+            <h2 class="text-center mb-4">Login</h2>
+
+            <!-- Login Form -->
             <form id="login-form">
-                <div class="form-group">
-                    <label for="email">Email:</label>
-                    <input type="text" id="email" name="email" required>
+                <!-- Email Input -->
+                <div class="mb-3">
+                    <label for="email" class="form-label">Email</label>
+                    <input type="email" class="form-control" id="email" name="email" placeholder="Enter your email" required>
                 </div>
-                <div class="form-group">
-                    <label for="password">Password:</label>
-                    <input type="password" id="password" name="password" required>
+
+                <!-- Password Input -->
+                <div class="mb-3">
+                    <label for="password" class="form-label">Password</label>
+                    <input type="password" class="form-control" id="password" name="password" placeholder="Enter your password" required>
                 </div>
-                <button type="submit" class="btn-login">Login</button>
-                <div id="login-message"></div> </form>
+
+                <!-- Submit Button -->
+                <div class="d-grid">
+                    <button type="submit" class="btn btn-primary">Login</button>
+                </div>
+
+                <!-- Login Message -->
+                <div id="login-message" class="mt-3 text-center text-danger"></div>
             </form>
         </div>
     </div>
 
-    <footer>
+    <!-- Footer -->
+    <footer class="bg-light text-center py-3 mt-5">
         <p>&copy; 2024 Plants E-Commerce Store. All rights reserved.</p>
     </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/login.js"></script>
 </body>
