--- a/ui/register.html
+++ b/ui/register.html
@@ -3,44 +3,65 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Register - E-Commerce Store</title>
+    <title>Sign Up - Plants E-Commerce Store</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/register.css">
-
+    <link rel="stylesheet" href="css/signup.css">
 </head>
 <body>
-    <header id="header"></header>
+    <!-- Header with Home Button -->
+    <header id="header" class="bg-light p-3 shadow-sm">
+        <div class="container d-flex align-items-center">
+            <!-- Home Button on the left -->
+            <a href="/ui/index.html" class="btn btn-success me-3">Home</a>
+            
+            <!-- Store Title in the Center -->
+            <h1 class="flex-grow-1 text-center">Plants E-Commerce Store</h1>
+        </div>
+    </header>
+    
+    <!-- Main Container -->
+    <div class="container mt-5 d-flex justify-content-center align-items-center">
+        <div class="card p-4 shadow-lg" style="width: 100%; max-width: 400px;">
+            <h2 class="text-center mb-4">Sign Up</h2>
 
-    <div class="container mt-4" role="main">
-        <div style="display: flex; align-items: center; margin-bottom: 10px;">
-            <a href="/ui/index.html" style="background-color: #28a745; color: white; padding: 10px 15px; text-decoration: none; border-radius: 5px; margin-right: 10px;">Home</a>
-          </div>
-        <h1>Register</h1>
-        <div class="register-form">
-            <form id="register-form">
-                <div class="form-group">
-                    <label for="username">Username:</label>
-                    <input type="text" id="username" name="username" required>
+            <!-- Sign Up Form -->
+            <form id="signup-form">
+                <!-- Username Input -->
+                <div class="mb-3">
+                    <label for="username" class="form-label">Username</label>
+                    <input type="text" class="form-control" id="username" name="username" placeholder="Enter your username" required>
                 </div>
-                <div class="form-group">
-                    <label for="email">Email:</label>
-                    <input type="text" id="email" name="email" required>
+
+                <!-- Email Input -->
+                <div class="mb-3">
+                    <label for="email" class="form-label">Email</label>
+                    <input type="email" class="form-control" id="email" name="email" placeholder="Enter your email" required>
                 </div>
-                <div class="form-group">
-                    <label for="password">Password:</label>
-                    <input type="password" id="password" name="password" required>
+
+                <!-- Password Input -->
+                <div class="mb-3">
+                    <label for="password" class="form-label">Password</label>
+                    <input type="password" class="form-control" id="password" name="password" placeholder="Enter your password" required>
                 </div>
-                <button type="submit" class="btn-register">Register</button>
-                <div id="register-message"></div> </form>
+
+                <!-- Submit Button -->
+                <div class="d-grid">
+                    <button type="submit" class="btn btn-primary">Sign Up</button>
+                </div>
+
+                <!-- Sign Up Message -->
+                <div id="signup-message" class="mt-3 text-center text-danger"></div>
             </form>
         </div>
     </div>
 
-    <footer>
+    <!-- Footer -->
+    <footer class="bg-light text-center py-3 mt-5">
         <p>&copy; 2024 Plants E-Commerce Store. All rights reserved.</p>
     </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="js/register.js"></script>
+    <script src="js/signup.js"></script>
 </body>
 </html>
