fix home button

--- a/ui/login.html
+++ b/ui/login.html
@@ -11,12 +11,12 @@
 <body>
     <!-- Header with Home Button -->
     <header id="header" class="bg-light p-3 shadow-sm">
-        <div class="container d-flex align-items-center">
+        <div class="container d-flex justify-content-between align-items-center">
             <!-- Home Button on the left -->
-            <a href="/ui/index.html" class="btn btn-success me-3">Home</a>
+            <a href="index.html" class="btn btn-success">Home</a>
             
             <!-- Store Title in the Center -->
-            <h1 class="flex-grow-1 text-center">Plants E-Commerce Store</h1>
+            <h1 class="text-center flex-grow-1">Plants E-Commerce Store</h1>
         </div>
     </header>
     
