--- a/ui/register.html
+++ b/ui/register.html
@@ -13,7 +13,7 @@
     <header id="header" class="bg-light p-3 shadow-sm">
         <div class="container d-flex align-items-center">
             <!-- Home Button on the left -->
-            <a href="/ui/index.html" class="btn btn-success me-3">Home</a>
+            <a href="index.html" class="btn btn-success me-3">Home</a>
             
             <!-- Store Title in the Center -->
             <h1 class="flex-grow-1 text-center">Plants E-Commerce Store</h1>
