--- a/ui/cart.html
+++ b/ui/cart.html
@@ -4,13 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shopping Cart - E-Commerce Store</title>
+    <title>Plants Store</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/plants.css">
 </head>
 
 <body>
-    <header id="header"></header>
+    <header id="header" class="bg-light p-3 shadow-sm">
+        <h1 class="text-center">Plant Store</h1>
+    </header>
 
     <main class="container mt-4">
         <h1>Shopping Cart</h1>
@@ -23,12 +26,12 @@
     </main>
 
     <footer class="bg-light text-center py-3 mt-5">
-        <p>&copy; 2024 Plants E-Commerce Store. All rights reserved.</p>
+        <p>&copy; 2024 Plants Store. All rights reserved.</p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/header.js"></script>
-    <script src="js/cart.js"></script>
+    <script src="js/plants.js"></script>
 </body>
 
 </html>
