--- a/ui/login.html
+++ b/ui/login.html
@@ -3,21 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login - Plants E-Commerce Store</title>
+    <title>Plants Store</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/login.css">
+    <link rel="stylesheet" href="css/plants.css">
 </head>
 <body>
-    <!-- Header with Home Button -->
     <header id="header" class="bg-light p-3 shadow-sm">
-        <div class="container d-flex justify-content-between align-items-center">
-            <!-- Home Button on the left -->
-            <a href="index.html" class="btn btn-success">Home</a>
-            
-            <!-- Store Title in the Center -->
-            <h1 class="text-center flex-grow-1">Plants E-Commerce Store</h1>
-        </div>
+        <h1 class="text-center">Plant Store</h1>
     </header>
     
     <!-- Main Container -->
@@ -50,12 +43,12 @@
         </div>
     </div>
 
-    <!-- Footer -->
     <footer class="bg-light text-center py-3 mt-5">
-        <p>&copy; 2024 Plants E-Commerce Store. All rights reserved.</p>
+        <p>&copy; 2024 Plants Store. All rights reserved.</p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="js/login.js"></script>
+    <script src="js/header.js"></script>
+    <script src="js/plants.js"></script>
 </body>
 </html>
