--- a/ui/register.html
+++ b/ui/register.html
@@ -4,22 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign Up - Plants E-Commerce Store</title>
+    <title>Plants Store</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/signup.css">
+    <link rel="stylesheet" href="css/plants.css">
 </head>
 
 <body>
-    <!-- Header with Home Button -->
     <header id="header" class="bg-light p-3 shadow-sm">
-        <div class="container d-flex align-items-center">
-            <!-- Home Button on the left -->
-            <a href="index.html" class="btn btn-success me-3">Home</a>
-            
-            <!-- Store Title in the Center -->
-            <h1 class="flex-grow-1 text-center">Plants E-Commerce Store</h1>
-        </div>
+        <h1 class="text-center">Plant Store</h1>
     </header>
     
     <!-- Main Container -->
@@ -58,12 +51,12 @@
         </div>
     </div>
 
-    <!-- Footer -->
     <footer class="bg-light text-center py-3 mt-5">
-        <p>&copy; 2024 Plants E-Commerce Store. All rights reserved.</p>
+        <p>&copy; 2024 Plants Store. All rights reserved.</p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="js/signup.js"></script>
+    <script src="js/header.js"></script>
+    <script src="js/plants.js"></script>
 </body>
 </html>
