--- a/ui/cart.html
+++ b/ui/cart.html
@@ -31,7 +31,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/header.js"></script>
-    <script src="js/plants.js"></script>
+    <script src="js/cart.js"></script>
 </body>
 
 </html>
