--- a/ui/register.html
+++ b/ui/register.html
@@ -57,6 +57,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/header.js"></script>
-    <script src="js/plants.js"></script>
+    <script src="js/register.js"></script>
 </body>
 </html>
