--- a/ui/index.html
+++ b/ui/index.html
@@ -8,9 +8,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/plants.css">
+    <link rel="stylesheet" href="css/video.css">
+    <link rel="icon" href="./css/logo.png">
 </head>
 
 <body>
+    <video autoplay muted loop id="Video">
+        <source src="./css/plants.mp4" type="video/mp4">
+      </video>
     <header id="header" class="bg-light p-3 shadow-sm">
         <h1 class="text-center">Plant Store</h1>
     </header>
@@ -41,7 +46,7 @@
 
         <!-- Search Section -->
         <div id="search-section" class="section mb-4">
-            <h2 class="mb-3">Search Plants</h2>
+            <h2 class="mb-3" style="color: aliceblue;">Search Plants</h2>
             <form id="search-form" class="row g-3">
                 <div class="col-md-4">
                     <input type="text" class="form-control" id="q" name="q" placeholder="Search term">
@@ -84,6 +89,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/header.js"></script>
     <script src="js/plants.js"></script>
+    <script src="js/video.js"></script>
+    <script src="js/map.js"></script>
 
     <script>
         // Script to toggle the create plant modal
