--- a/ui/adminPanel.html
+++ b/ui/adminPanel.html
@@ -6,9 +6,14 @@
     <title>Admin Panel</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/adminPanel.css">
+    <link rel="stylesheet" href="css/video.css">
+
 
 </head>
 <body>
+    <video autoplay muted loop id="Video">
+        <source src="./css/plants.mp4" type="video/mp4">
+      </video>
     <div id="header"></div>
 
     <div id="admin-content" style="display: none;">
