--- a/ui/index.html
+++ b/ui/index.html
@@ -64,7 +64,7 @@
                     <input type="number" class="form-control" id="maxPrice" name="maxPrice" placeholder="Max Price">
                 </div>
                 <div class="col-md-1">
-                    <button type="submit" class="btn btn-primary w-100">Search</button>
+                    <button type="submit" class="btn btn-primary w-100 custom-btn">Search</button>
                 </div>
             </form>
         </div>
