Fixed visual and technical bugs

--- a/ui/index.html
+++ b/ui/index.html
@@ -52,10 +52,7 @@
                     <input type="text" class="form-control" id="q" name="q" placeholder="Search term">
                 </div>
                 <div class="col-md-3">
-                    <select id="category" name="category" class="form-select">
-                        <option value="">All Categories</option>
-                        <option value="Flower">Flower</option>
-                    </select>
+                    <input type="text" class="form-control" id="category" name="category" placeholder="Category">
                 </div>
                 <div class="col-md-2">
                     <input type="number" class="form-control" id="minPrice" name="minPrice" placeholder="Min Price">
@@ -74,9 +71,9 @@
             <!-- Dynamic content will be inserted here -->
         </div>
 
-        <!-- Pagination -->
-        <div id="pagination" class="d-flex justify-content-center align-items-center mt-4">
-            <button id="prev-page" class="btn btn-outline-primary me-3">Previous</button>
+            <!-- Pagination -->
+            <div id="pagination" class="d-flex justify-content-center align-items-center mt-4">
+                <button id="prev-page" class="btn btn-outline-primary me-3">Previous</button>
             <span id="current-page" class="fs-5">1</span>
             <button id="next-page" class="btn btn-outline-primary ms-3">Next</button>
         </div>
