--- a/ui/register.html
+++ b/ui/register.html
@@ -21,7 +21,7 @@
             <h2 class="text-center mb-4">Sign Up</h2>
 
             <!-- Sign Up Form -->
-            <form id="signup-form">
+            <form id="register-form">
                 <!-- Username Input -->
                 <div class="mb-3">
                     <label for="username" class="form-label">Username</label>
@@ -46,7 +46,7 @@
                 </div>
 
                 <!-- Sign Up Message -->
-                <div id="signup-message" class="mt-3 text-center text-danger"></div>
+                <div id="register-message" class="mt-3 text-center text-danger"></div>
             </form>
         </div>
     </div>
