--- a/ui/seller.html
+++ b/ui/seller.html
@@ -11,27 +11,29 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.7.0/chart.min.js"></script>
 </head>
 <body>
+<header id="header" class="bg-light p-3 shadow-sm">
+    <h1 class="text-center">Plant Store</h1>
+</header>
+
+
+<main class="container mt-4">
     <h1>Seller Admin Page</h1>
-    <div style="display: flex; align-items: center; margin-bottom: 10px;">
-        <a href="/ui/index.html" style="background-color: #28a745; color: white; padding: 10px 15px; text-decoration: none; border-radius: 5px; margin-right: 10px;">Home</a>
-    </div>
     <h2>Product Management</h2>
 
     <table id="productTable">
         <thead>
-            <tr>
-                <th>Name</th>
-                <th>Price</th>
-                <th>Stock</th>
-                <th>Actions</th>
-            </tr>
+        <tr>
+            <th>Name</th>
+            <th>Price</th>
+            <th>Stock</th>
+            <th>Actions</th>
+        </tr>
         </thead>
         <tbody></tbody>
     </table>
-    
-    <button onclick="openAddProductModal()">Add Product</button>
+
     <div role="main">
-        <button id="create-plant-btn" class="btn btn-success">Create Plant</button>
+        <button id="create-plant-btn" class="btn btn-success" hidden="hidden">Create Plant</button>
 
         <div id="create-plant-modal" class="modal" style="display: none;">
             <div class="modal-content">
@@ -49,19 +51,21 @@
                 </form>
             </div>
         </div>
-    <div id="addProductModal" class="modal">
-        <h3>Add/Edit Product</h3>
-        <input type="text" id="productName" placeholder="Product Name">
-        <input type="number" id="productPrice" step="0.01" placeholder="Price">
-        <input type="number" id="productStock" placeholder="Stock">
-        <button onclick="saveProduct()">Save</button>
-        <button onclick="closeAddProductModal()">Cancel</button>
-    </div>
-    
-    <h2>Sales Visualization</h2>
-    <canvas id="salesChart"></canvas>
+        <div id="addProductModal" class="modal">
+            <h3>Add/Edit Product</h3>
+            <input type="text" id="productName" placeholder="Product Name">
+            <input type="number" id="productPrice" step="0.01" placeholder="Price">
+            <input type="number" id="productStock" placeholder="Stock">
+            <button onclick="saveProduct()">Save</button>
+            <button onclick="closeAddProductModal()">Cancel</button>
+        </div>
 
-    <script src="js/seller.js"></script>
+        <h2>Sales Visualization</h2>
+        <canvas id="salesChart"></canvas>
+        <script src="js/header.js"></script>
+        <script src="js/seller.js"></script>
     </div>
+</main>
+
 </body>
 </html>
