--- a/ui/adminPanel.html
+++ b/ui/adminPanel.html
@@ -53,12 +53,11 @@
                     <input type="number" id="search-maxCredit" placeholder="Max Credit">
                     <select id="search-sort">
                         <option value="">Sort By</option>
-                        <option value="username">Username</option>
-                        <option value="email">Email</option>
-                        <option value="credit">Credit</option>
+                        <option value="username_asc">Username</option>
+                        <option value="credit_asc">Credit</option>
                     </select>
-                    <input type="number" id="search-page" placeholder="Page" value="1">
-                    <input type="number" id="search-limit" placeholder="Limit" value="10">
+                    <input type="number" id="search-page" placeholder="Page">
+                    <input type="number" id="search-limit" placeholder="Limit">
                     <button type="submit" class="btn btn-primary">Search</button>
                 </form>
             </div>
