--- a/ui/cart.html
+++ b/ui/cart.html
@@ -23,6 +23,9 @@
         <div id="cart-total" class="mt-4">
             <!-- Total amount will be displayed here -->
         </div>
+        <div class="d-flex justify-content-end mt-3">
+            <button id="sendOrderToBackend" class="btn btn-success" onclick="sendOrderToBackend()">Place Order</button>
+        </div>
     </main>
 
     <footer class="bg-light text-center py-3 mt-5">
