fix footer on login

--- a/ui/login.html
+++ b/ui/login.html
@@ -7,6 +7,18 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/plants.css">
+    <style>
+        /* Full-height layout and sticky footer styling */
+        html, body {
+            height: 100%;
+            margin: 0;
+            display: flex;
+            flex-direction: column;
+        }
+        .container {
+            flex: 1; /* Makes container expand to fill space */
+        }
+    </style>
 </head>
 <body>
     <header id="header" class="bg-light p-3 shadow-sm">
@@ -43,7 +55,7 @@
         </div>
     </div>
 
-    <footer class="bg-light text-center py-3 mt-5">
+    <footer class="bg-light text-center py-3">
         <p>&copy; 2024 Plants Store. All rights reserved.</p>
     </footer>
 
