--- a/ui/adminPanel.html
+++ b/ui/adminPanel.html
@@ -8,20 +8,18 @@
     <link rel="stylesheet" href="css/adminPanel.css">
     <link rel="stylesheet" href="css/video.css">
     <link rel="icon" href="./css/logo.png">
-
-
 </head>
 <body>
-    <video autoplay muted loop id="Video">
-        <source src="./css/plants.mp4" type="video/mp4">
-      </video>
-    <div id="header"></div>
+<video autoplay muted loop id="Video">
+    <source src="./css/plants.mp4" type="video/mp4">
+</video>
+<div id="header"></div>
 
-    <div id="admin-content" style="display: none;">
+<div id="admin-content" style="display: none;">
         <div class="container mt-4">
 
             <h1>Admin Panel</h1>
-            
+
             <div id="message" class="alert" style="display: none;"></div>
 
             <div class="mb-4">
@@ -66,18 +64,20 @@
                 <div id="users-list" class="mt-3"></div>
             </div>
         </div>
-    </div>
+</div>
 
-    <div id="unauthorized-message" style="display: none;">
-        <div class="container mt-4">
-            <div class="alert alert-danger">
-                You are not authorized to view this page. Please log in as an admin.
-            </div>
+<div id="unauthorized-message" style="display: none;">
+    <div class="container mt-4">
+        <div class="alert alert-danger">
+            You are not authorized to view this page. Please log in as an admin.
         </div>
     </div>
+</div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="js/header.js"></script>
-    <script src="js/adminPanel.js"></script>
+<!-- Load jQuery before your custom JavaScript files -->
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="js/header.js"></script>
+<script src="js/adminPanel.js"></script>
 </body>
 </html>
