--- a/ui/cart.html
+++ b/ui/cart.html
@@ -24,30 +24,32 @@
 </head>
 
 <body>
-    <header id="header" class="bg-light p-3 shadow-sm">
-        <h1 class="text-center">Plant Store</h1>
-    </header>
+<header id="header" class="bg-light p-3 shadow-sm">
+    <h1 class="text-center">Plant Store</h1>
+</header>
 
-    <main class="container mt-4">
-        <h1>Shopping Cart</h1>
-        <div id="cart-items">
-            <!-- Cart items will be dynamically added here -->
-        </div>
-        <div id="cart-total" class="mt-4">
-            <!-- Total amount will be displayed here -->
-        </div>
-        <div class="d-flex justify-content-end mt-3">
-            <button id="sendOrderToBackend" class="btn btn-success" onclick="sendOrderToBackend()">Place Order</button>
-        </div>
-    </main>
+<main class="container mt-4">
+    <h1>Shopping Cart</h1>
+    <div id="cart-items">
+        <!-- Cart items will be dynamically added here -->
+    </div>
+    <div id="cart-total" class="mt-4">
+        <!-- Total amount will be displayed here -->
+    </div>
+    <div class="d-flex justify-content-end mt-3">
+        <button id="sendOrderToBackend" class="btn btn-success">Place Order</button>
+    </div>
+</main>
 
-    <footer class="bg-light text-center py-3">
-        <p>&copy; 2024 Plants Store. All rights reserved.</p>
-    </footer>
+<footer class="bg-light text-center py-3">
+    <p>&copy; 2024 Plants Store. All rights reserved.</p>
+</footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="js/header.js"></script>
-    <script src="js/cart.js"></script>
+<!-- Load jQuery before your custom JavaScript files -->
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+<script src="js/header.js"></script>
+<script src="js/cart.js"></script>
 </body>
 
 </html>
