--- a/ui/login.html
+++ b/ui/login.html
@@ -23,46 +23,48 @@
     </style>
 </head>
 <body>
-    <header id="header" class="bg-light p-3 shadow-sm">
-        <h1 class="text-center">Plant Store</h1>
-    </header>
-    
-    <!-- Main Container -->
-    <div class="container mt-5 d-flex justify-content-center align-items-center">
-        <div class="card p-4 shadow-lg" style="width: 100%; max-width: 400px;">
-            <h2 class="text-center mb-4">Login</h2>
+<header id="header" class="bg-light p-3 shadow-sm">
+    <h1 class="text-center">Plant Store</h1>
+</header>
 
-            <!-- Login Form -->
-            <form id="login-form">
-                <!-- Email Input -->
-                <div class="mb-3">
-                    <label for="email" class="form-label">Email</label>
-                    <input type="email" class="form-control" id="email" name="email" placeholder="Enter your email" required>
-                </div>
+<!-- Main Container -->
+<div class="container mt-5 d-flex justify-content-center align-items-center">
+    <div class="card p-4 shadow-lg" style="width: 100%; max-width: 400px;">
+        <h2 class="text-center mb-4">Login</h2>
 
-                <!-- Password Input -->
-                <div class="mb-3">
-                    <label for="password" class="form-label">Password</label>
-                    <input type="password" class="form-control" id="password" name="password" placeholder="Enter your password" required>
-                </div>
+        <!-- Login Form -->
+        <form id="login-form">
+            <!-- Email Input -->
+            <div class="mb-3">
+                <label for="email" class="form-label">Email</label>
+                <input type="email" class="form-control" id="email" name="email" placeholder="Enter your email" required>
+            </div>
 
-                <!-- Submit Button -->
-                <div class="d-grid">
-                    <button type="submit" class="btn btn-primary">Login</button>
-                </div>
+            <!-- Password Input -->
+            <div class="mb-3">
+                <label for="password" class="form-label">Password</label>
+                <input type="password" class="form-control" id="password" name="password" placeholder="Enter your password" required>
+            </div>
 
-                <!-- Login Message -->
-                <div id="login-message" class="mt-3 text-center text-danger"></div>
-            </form>
-        </div>
+            <!-- Submit Button -->
+            <div class="d-grid">
+                <button type="submit" class="btn btn-primary">Login</button>
+            </div>
+
+            <!-- Login Message -->
+            <div id="login-message" class="mt-3 text-center text-danger"></div>
+        </form>
     </div>
+</div>
 
-    <footer class="bg-light text-center py-3">
-        <p>&copy; 2024 Plants Store. All rights reserved.</p>
-    </footer>
+<footer class="bg-light text-center py-3">
+    <p>&copy; 2024 Plants Store. All rights reserved.</p>
+</footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="js/header.js"></script>
-    <script src="js/login.js"></script>
+<!-- Load jQuery before your custom JavaScript files -->
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+<script src="js/header.js"></script>
+<script src="js/login.js"></script>
 </body>
 </html>
