--- a/ui/order-history.html
+++ b/ui/order-history.html
@@ -93,6 +93,7 @@
 </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="js/header.js"></script>
 <script src="js/order-history.js"></script>
 </body>
