--- a/ui/seller.html
+++ b/ui/seller.html
@@ -4,19 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Seller Admin Page</title>
-    
+
     <link rel="stylesheet" href="css/seller.css">
     <link rel="stylesheet" href="css/plants.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.7.0/chart.min.js"></script>
     <link rel="icon" href="./css/logo.png">
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.7.0/chart.min.js"></script>
 </head>
 <body>
 <header id="header" class="bg-light p-3 shadow-sm">
     <h1 class="text-center">Plant Store</h1>
 </header>
-
 
 <main class="container mt-4">
     <h1>Seller Admin Page</h1>
@@ -46,12 +44,11 @@
                     <input type="number" id="plant-price" name="price" placeholder="Price" step="0.01" required><br>
                     <input type="text" id="plant-category" name="category" placeholder="Category" required><br>
                     <input type="text" id="plant-origin-country" name="originCountry" placeholder="Origin Country" required><br>
-                    <label for="indoor">Indoor Plant:</label>
-                    <input type="checkbox" id="indoor" name="indoor"><br>
                     <button type="submit" class="btn btn-success">Submit</button>
                 </form>
             </div>
         </div>
+
         <div id="addProductModal" class="modal">
             <h3>Add/Edit Product</h3>
             <input type="text" id="productName" placeholder="Product Name">
@@ -63,10 +60,14 @@
 
         <h2>Sales Visualization</h2>
         <canvas id="salesChart"></canvas>
-        <script src="js/header.js"></script>
-        <script src="js/seller.js"></script>
     </div>
 </main>
+
+<!-- Load jQuery before your custom JavaScript files -->
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+<script src="js/header.js"></script>
+<script src="js/seller.js"></script>
 
 </body>
 </html>
