showing user's total amount of money he spent

--- a/ui/order-history.html
+++ b/ui/order-history.html
@@ -55,6 +55,8 @@
 <main class="container mt-4">
     <h1>Order History</h1>
 
+    <div id="total-delivered-amount" class="mb-3"></div> <!-- Dedicated container for total delivered amount -->
+
     <div class="filter-section">
         <div class="row">
             <div class="col-md-6">
