--- a/ui/adminPanel.html
+++ b/ui/adminPanel.html
@@ -3,80 +3,97 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin Panel</title>
+    <title>Admin Panel - Plants Store</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/adminPanel.css">
-    <link rel="stylesheet" href="css/video.css">
     <link rel="icon" href="./css/logo.png">
 </head>
 <body>
-<video autoplay muted loop id="Video">
-    <source src="./css/plants.mp4" type="video/mp4">
-</video>
-<div id="header"></div>
+<header id="header" class="bg-light p-3 shadow-sm">
+    <h1 class="text-center">Admin Panel</h1>
+</header>
 
-<div id="admin-content" style="display: none;">
-        <div class="container mt-4">
+<main class="container-fluid mt-4">
+    <div id="message" class="alert" style="display: none;"></div>
 
-            <h1>Admin Panel</h1>
-
-            <div id="message" class="alert" style="display: none;"></div>
-
-            <div class="mb-4">
-                <h2>Make User Admin</h2>
-                <form id="make-admin-form">
-                    <input type="text" id="make-admin-userId" placeholder="User ID" required>
-                    <button type="submit" class="btn btn-primary">Make Admin</button>
-                </form>
-            </div>
-
-            <div class="mb-4">
-                <h2>Delete User</h2>
-                <form id="delete-user-form">
-                    <input type="text" id="delete-userId" placeholder="User ID" required>
-                    <button type="submit" class="btn btn-danger">Delete User</button>
-                </form>
-            </div>
-
-            <div class="mb-4">
-                <h2>Search Users</h2>
-                <form id="search-users-form">
-                    <input type="text" id="search-username" placeholder="Username">
-                    <input type="email" id="search-email" placeholder="Email">
-                    <select id="search-isAdmin">
-                        <option value="">Is Admin</option>
-                        <option value="true">Yes</option>
-                        <option value="false">No</option>
-                    </select>
-                    <select id="search-sort">
-                        <option value="">Sort By</option>
-                        <option value="username_asc">Username</option>
-                    </select>
-                    <input type="number" id="search-page" placeholder="Page">
-                    <input type="number" id="search-limit" placeholder="Limit">
-                    <button type="submit" class="btn btn-primary">Search</button>
-                </form>
-            </div>
-
-            <div>
-                <h2>All Users</h2>
-                <button id="get-all-users" class="btn btn-info">Get All Users</button>
-                <div id="users-list" class="mt-3"></div>
-            </div>
+    <!-- Graph Sections in a single row -->
+    <div class="row">
+        <div class="col-md-6">
+            <div id="per-user-chart" class="chart-container"></div>
         </div>
-</div>
-
-<div id="unauthorized-message" style="display: none;">
-    <div class="container mt-4">
-        <div class="alert alert-danger">
-            You are not authorized to view this page. Please log in as an admin.
+        <div class="col-md-6">
+            <div id="hourly-sales-chart" class="chart-container"></div>
         </div>
     </div>
-</div>
 
-<!-- Load jQuery before your custom JavaScript files -->
+    <!-- Make User Admin and Delete User Sections -->
+    <div class="admin-section row mt-5">
+        <div class="col-md-6">
+            <h2>Make User Admin</h2>
+            <form id="make-admin-form" class="d-flex">
+                <input type="text" id="make-admin-userId" placeholder="User ID" class="form-control me-2" required>
+                <button type="submit" class="btn btn-primary">Make Admin</button>
+            </form>
+        </div>
+        <div class="col-md-6">
+            <h2>Delete User</h2>
+            <form id="delete-user-form" class="d-flex">
+                <input type="text" id="delete-userId" placeholder="User ID" class="form-control me-2" required>
+                <button type="submit" class="btn btn-danger">Delete User</button>
+            </form>
+        </div>
+    </div>
+
+    <!-- Search / Get All Users Section -->
+    <div class="admin-section">
+        <h2>Search Users</h2>
+        <form id="search-users-form" class="row g-3">
+            <div class="col-md-4">
+                <input type="text" id="search-username" placeholder="Username" class="form-control">
+            </div>
+            <div class="col-md-4">
+                <input type="email" id="search-email" placeholder="Email" class="form-control">
+            </div>
+            <div class="col-md-4">
+                <select id="search-isAdmin" class="form-control">
+                    <option value="">Is Admin</option>
+                    <option value="true">Yes</option>
+                    <option value="false">No</option>
+                </select>
+            </div>
+            <div class="col-md-3">
+                <select id="search-sort" class="form-control">
+                    <option value="">Sort By</option>
+                    <option value="username_asc">Username</option>
+                </select>
+            </div>
+            <div class="col-md-2">
+                <input type="number" id="search-page" placeholder="Page" class="form-control">
+            </div>
+            <div class="col-md-2">
+                <input type="number" id="search-limit" placeholder="Limit" class="form-control">
+            </div>
+            <div class="col-md-3 d-flex">
+                <button type="submit" class="btn btn-info me-2 w-100">Search</button>
+                <button type="button" id="get-all-users" class="btn btn-secondary w-100">Get All Users</button>
+            </div>
+        </form>
+    </div>
+
+    <!-- User Results Section -->
+    <div class="admin-section">
+        <h2>User Results</h2>
+        <div id="users-list" class="mt-3"></div>
+    </div>
+</main>
+
+<footer class="bg-light text-center py-3">
+    <p>&copy; 2024 Plants Store. All rights reserved.</p>
+</footer>
+
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://d3js.org/d3.v7.min.js"></script>
 <script src="js/header.js"></script>
 <script src="js/adminPanel.js"></script>
 </body>
