--- a/ui/index.html
+++ b/ui/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,73 +9,22 @@
     <link rel="stylesheet" href="css/plants.css">
     <link rel="stylesheet" href="css/video.css">
     <link rel="icon" href="./css/logo.png">
-    <style>
-        /* Ensure the footer sticks to the bottom */
-        html, body {
-            height: 100%;
-            margin: 0;
-            display: flex;
-            flex-direction: column;
-        }
-        .container {
-            flex: 1; /* Expands to fill available space */
-        }
-    </style>
 </head>
 
 <body>
 <video autoplay muted loop id="Video">
     <source src="./css/plants.mp4" type="video/mp4">
 </video>
+
 <header id="header" class="bg-light p-3 shadow-sm">
-    <h1 class="text-center">Plant Store</h1>
+    <h1 class="text-center" id="page-title">Welcome to the Plant Store</h1>
 </header>
 
-<div role="main" class="container mt-4">
-    <!-- Create Plant Button -->
-    <div class="d-flex justify-content-end mb-3">
-        <button id="create-plant-btn" class="btn btn-success">Create Plant</button>
-    </div>
-
-    <!-- Create Plant Modal -->
-    <div id="create-plant-modal" class="modal" style="display: none;">
-        <div class="modal-content">
-            <button id="close-create-plant" class="close" aria-label="Close">&times;</button>
-            <h2>Create a New Plant</h2>
-            <form id="create-plant-form">
-                <div class="mb-3">
-                    <label for="plant-name">Plant Name:</label>
-                    <input type="text" id="plant-name" name="name" class="form-control" placeholder="Enter plant name" required>
-                </div>
-                <div class="mb-3">
-                    <label for="plant-description">Description:</label>
-                    <textarea id="plant-description" name="description" class="form-control" placeholder="Enter plant description" rows="3" required></textarea>
-                </div>
-                <div class="mb-3">
-                    <label for="plant-price">Price:</label>
-                    <input type="number" id="plant-price" name="price" class="form-control" placeholder="Enter price" step="0.01" required>
-                </div>
-                <div class="mb-3">
-                    <label for="plant-category">Category:</label>
-                    <select id="plant-category" name="category" class="form-select" required>
-                        <option value="">Select Category</option>
-                        <option value="Flower">Flower</option>
-                        <option value="Tree">Tree</option>
-                    </select>
-                </div>
-                <div class="mb-3">
-                    <label for="plant-origin-country">Origin Country:</label>
-                    <input type="text" id="plant-origin-country" name="originCountry" class="form-control" placeholder="Enter origin country" required>
-                </div>
-                <button type="submit" class="btn btn-success w-100">Submit</button>
-            </form>
-        </div>
-    </div>
-
-    <!-- Search Section -->
-    <div id="search-section" class="section mb-4">
-        <h2 class="mb-3" style="color: aliceblue;">Search Plants</h2>
-        <form id="search-form" class="row g-3">
+<main role="main" class="container mt-5">
+    <!-- Search and Create Plant Section -->
+    <div id="search-section" class="section mb-5">
+        <h2 class="text-center mb-4" style="color: #333;">Find Your Ideal Plant</h2>
+        <form id="search-form" class="row g-3 align-items-end">
             <div class="col-md-4">
                 <input type="text" class="form-control" id="q" name="q" placeholder="Search term">
             </div>
@@ -93,24 +41,60 @@
             <div class="col-md-2">
                 <input type="number" class="form-control" id="maxPrice" name="maxPrice" placeholder="Max Price">
             </div>
-            <div class="col-md-1">
-                <button type="submit" class="btn btn-primary w-100 custom-btn">Search</button>
+            <div class="col-md-1 d-flex gap-2">
+                <button type="submit" class="btn btn-primary custom-btn w-100">Search</button>
+                <button id="create-plant-btn" class="btn btn-success">Create</button>
             </div>
         </form>
     </div>
 
+    <!-- Create Plant Modal -->
+    <div id="create-plant-modal" class="modal">
+        <div class="modal-content">
+            <button id="close-create-plant" class="close" aria-label="Close">&times;</button>
+            <h2>Create a New Plant</h2>
+            <form id="create-plant-form">
+                <div class="mb-3">
+                    <label for="plant-name" class="form-label">Plant Name:</label>
+                    <input type="text" id="plant-name" name="name" class="form-control" placeholder="Enter plant name" required>
+                </div>
+                <div class="mb-3">
+                    <label for="plant-description" class="form-label">Description:</label>
+                    <textarea id="plant-description" name="description" class="form-control" placeholder="Enter plant description" rows="3" required></textarea>
+                </div>
+                <div class="mb-3">
+                    <label for="plant-price" class="form-label">Price:</label>
+                    <input type="number" id="plant-price" name="price" class="form-control" placeholder="Enter price" step="0.01" required>
+                </div>
+                <div class="mb-3">
+                    <label for="plant-category" class="form-label">Category:</label>
+                    <select id="plant-category" name="category" class="form-select" required>
+                        <option value="">Select Category</option>
+                        <option value="Flower">Flower</option>
+                        <option value="Tree">Tree</option>
+                    </select>
+                </div>
+                <div class="mb-3">
+                    <label for="plant-origin-country" class="form-label">Origin Country:</label>
+                    <input type="text" id="plant-origin-country" name="originCountry" class="form-control" placeholder="Enter origin country" required>
+                </div>
+                <button type="submit" class="btn btn-success w-100">Submit</button>
+            </form>
+        </div>
+    </div>
+
     <!-- Plants Container -->
-    <div id="plants-container" class="row g-3">
+    <div id="plants-container" class="row g-4">
         <!-- Dynamic content will be inserted here -->
     </div>
 
     <!-- Pagination -->
-    <div id="pagination" class="d-flex justify-content-center align-items-center mt-4">
+    <div id="pagination" class="d-flex justify-content-center align-items-center mt-5">
         <button id="prev-page" class="btn btn-outline-primary me-3" aria-label="Previous Page">Previous</button>
-        <span id="current-page" class="fs-5" aria-live="polite" style="color: aliceblue;">1</span>
+        <span id="current-page" class="fs-5 page-number" aria-live="polite">Page 1</span>
         <button id="next-page" class="btn btn-outline-primary ms-3" aria-label="Next Page">Next</button>
     </div>
-</div>
+</main>
 
 <footer class="bg-light text-center py-3">
     <p>&copy; 2024 Plants Store. All rights reserved.</p>
