fix search button

--- a/ui/index.html
+++ b/ui/index.html
@@ -57,7 +57,7 @@
                 <input type="number" class="form-control" id="maxPrice" name="maxPrice" placeholder="Max Price">
             </div>
             <div class="col-md-1 d-flex gap-2">
-                <button type="submit" class="btn btn-primary custom-btn w-100">Search</button>
+                <button type="submit" class="btn btn-primary custom-btn">Search</button>
                 <button id="create-plant-btn" class="btn btn-success">Create</button>
             </div>
         </form>
